# globus-group-manager

./: .gitignore  MANIFEST.in  README.rst  configuration.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg
.github/: dependabot.yml
.github/workflows/: default.yml
_sources/: configuration.rst.txt  index.rst.txt
docs/: conf.py  index.rst  installation.rst
src/ggm/: __main__.py  environ.py  scope.py
src/ggm/cli/: __init__.py  scopes.py  util.py
src/ggm/cli/plumbing/: __init__.py  globus.py
src/ggm/globus/: client.py  group.py
src/webapp/: __init__.py
src/webapp/templates/: hello.html
